@@ -1,0 +1,32 @@
+#!/bin/sh
+
+# 1010101010101010101010101010101010101010101010101010101010101010101010101010101
+# 0101010101010101010101010101010101010101010101010101010101010101010101010101010
+# 1   ___  ___          _     ______                                            1
+# 0   |  \/  |         (_)    |  _  \              Open Source Tools,           0
+# 1   | .  . | _____  ___  ___| | | |_____   __    Firmware, and HDL code for   1
+# 0   | |\/| |/ _ \ \/ / |/ _ \ | | / _ \ \ / /    the Moxie processor core.    0
+# 1   | |  | | (_) >  <| |  __/ |/ /  __/\ V /                                  1
+# 0   \_|  |_/\___/_/\_\_|\___|___/ \___| \_/      http://moxielogic.org/blog   0
+# 1                                                                             1
+# 0101010101010101010101010101010101010101010101010101010101010101010101010101010
+# 1010101010101010101010101010101010101010101010101010101010101010101010101010101
+
+# Copyright (C) 2010  Anthony Green <green@moxielogic.com>
+# Distrubuted under the terms of the GPL v3 or later.
+
+# Check to make sure that the right submodules have been checked out of the git
+# repository before we start building.
+
+COUNT=`git config -l | grep submodule | wc -l`
+
+# There should not be 0.
+if test "$COUNT" -eq "0"; then
+  echo "./scripts/check-submodules is downloading the missing submodules"
+  git submodule init
+  git submodule update
+else
+  echo "./scripts/check-submodules says we have all git submodules"
+fi
+
+
